wxWindows 2 Change Log
----------------------

2.1.14
------

wxBase:

- wxDateTime replaces and extends old wxDate and wxTime classes (still
  available but strongly deprecated) with many new features
- wxLongLong class provides support for (signed) 64 bit integers
- wxCmdLineParser class for parsing the command line (supporting short and
  long options, switches and parameters of different types)
- it is now possible to build wxBase under Win32 (using VC++ only so far)
  and BeOS (without thread support yet)
- wxThread class modified to support both detached and joinable threads, also
  added new GetCPUCount() and SetConcurrency() functions (useful under Solaris
  only so far)
- wxDir class for enumerating files in a directory
- wxLog functions are now (more) MT-safe
- wxStopWatch class, timer functions have more chances to return correct
  results for your platform (use ANSI functions where available)
- wxString::ToLong, ToULong, ToDouble methods and Format() static one added
- buffer overflows in wxString and wxLog classes fixed (if snprintf() function
  is available)
- wxArray::RemoveAt() replaces deprecated wxArray::Remove(index)

all (GUI):

- Added wxImage::Rotate.
- new wxCalendarCtrl class for picking a date interactively
- wxMenu(Bar)::Insert() and Remove() functions for dynamic menu menagament
- wxToolBar supports arbitrary controls (not only buttons) and can be
  dynamically changed (Delete/Insert functions)
- vertical toolbars supported by MSW and GTK native wxToolBar classes
- wxTreeCtrl and wxListCtrl allow setting colour/fonts for individual items
- "file open" dialog allows selecting multiple files at once (contributed by
  John Norris)
- wxMimeTypesManager uses GNOME/KDE MIME database to get the icons for the
  MIME types if available (Unix only)
- wxDC::DrawRotatedText() (based on contribution by Hans-Joachim Baader)
- TIFF support added (libtiff required and included in the distribution)
- PCX files can now be written (24 bit only so far)